Stub click-through pages and minor styling update

--- a/src/src/App.css
+++ b/src/src/App.css
@@ -23,8 +23,8 @@
   --color-text-secondary-dark: #ccc;
   --color-text-muted-dark: #aaa;
   
-  --color-bg-primary-dark: #1a1a1a;
-  --color-bg-secondary-dark: #2d2d2d;
+  --color-bg-primary-dark: #5E318C;
+  --color-bg-secondary-dark: #848282;
   --color-bg-card-dark: #333;
   
   --color-border-dark: #444;
